Neu in dieser Version ([VERSION]):
- behebt Fehler in der Temperaturumrechnung (Celsius zu Kelvin) in der Gadgetbridge api

Version 0.31:
- Absturz beim ersten Starten behoben (und keine alte Wetterdaten da sind)
- "Was ist neu" erscheint nun auch bei der Erstinstallation

Version 0.30:
- Option hinzugefügt, um Wetterdaten in regelmäßigen Abständen zu laden, dies kann in den Einstellungen ein- und ausgeschaltet werden
- sichtbare, letzte Aktualisierungs-Zeit in der App hinzugefügt
- Die App und das Widget zeigen nun auch die Windrichtung
- behoben: Wind-Daten haben die Richtungs-Information verloren
- behoben: Parsing-Fehler des FDAT-Feldes (Teil der Sensor-ID)
- behoben: ungültiger Standard-Wert für das Aktualisierungsintervall
- behoben: Fehler, der zu einer sehr seltenen Aktualisierung führte
- Gadgetbridge-Unterstützung: behoben: Unix-Zeitstempel war mit Müll gefüllt
- Gadgetbridge-Unterstützung: behoben: Wind-Richtung war immer 0°
- Gadgetbridge-Unterstützung: behoben: Temperatur wurde in Celsius anstelle Kelvin übermittelt
- Gadgetbridge-Unterstützung: behoben: Wetterstände waren nicht immer mit dem Lineageos-Standard kompatibel
- Gadgetbridge-Unterstützung: behoben: der Wetterstand zeigt nun das aktuelle Wetter anstelle der Voraussage für den Tag
- Die Gadgetbridge-Unterstützung ist noch experimentell, sollte aber funktionieren!
- Deutsche Sprache hinzu gefügt