@@ -1,5 +1,7 @@
 Neu in dieser Version ([VERSION]):
+
 - behebt Fehler in der Temperaturumrechnung (Celsius zu Kelvin) in der Gadgetbridge api
+- leichte Layout-Korrektur im Widget (das Wettersymbol ist jetzt etwas größer)
 
 Version 0.31:
 - Absturz beim ersten Starten behoben (und keine alte Wetterdaten da sind)
